Bug Fixes - Performance improvement for Grids on Server Monitoring Page - Style cjhanges for the height alignment of grid rows

--- a/webroot/css/contrail.grid.css
+++ b/webroot/css/contrail.grid.css
@@ -255,6 +255,8 @@
     color: #393939;
     font-size: 13px;
     padding: 5px;
+    height: inherit;
+    box-sizing: border-box;
     overflow-y: hidden;
     word-break:break-all;
     white-space: normal;
